--- a/books.html
+++ b/books.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-
+    <script src="scripts/search.js"></script>
     <script>
         $(document).ready(function () {
             $('header').load('header.html');
@@ -31,6 +31,7 @@
             <div id="books" class="page">
                 <div class="content-card">
                     <h2 class="section-title">Our Book Collection</h2>
+                    <input id="myInput" type="text" placeholder="Search..">
                     <div class="book-grid">
                         <div class="book-card">
                             <div class="book-title">Becoming</div>
