Added back button

--- a/1984.html
+++ b/1984.html
@@ -52,6 +52,7 @@
                     authoritarian tendencies and to cherish the fragile nature of truth and autonomy.
                 </div>
             </div>
+            <br><a href="books.html" class="cta-button">Back to Booklist</a>
         </div>
     </main>
 
