--- a/educated.html
+++ b/educated.html
@@ -41,6 +41,7 @@
                     she’d traveled too far, if there was still a way home.
                 </div>
             </div>
+            <br><a href="books.html" class="cta-button">Back to Booklist</a>
         </div>
     </main>
 
