Disable the Book Detail Button

--- a/books.html
+++ b/books.html
@@ -61,17 +61,13 @@
                             <div class="book-title">Pride and Prejudice</div>
                             <div class="book-author">by Jane Austen</div>
                             <div class="book-status available">Available</div>
-                            <div class="book-status btn-book">
-                                <a href="#">Book Detail</a>
-                            </div>
+                            <div class="book-status btn-book" aria-disabled="true" role="button" data-bs-toggle="button">Book Detail</div>
                         </div>
                         <div class="book-card">
                             <div class="book-title">The Catcher in the Rye</div>
                             <div class="book-author">by J.D. Salinger</div>
                             <div class="book-status borrowed">Borrowed</div>
-                            <div class="book-status btn-book">
-                                <a href="#">Book Detail</a>
-                            </div>
+                            <div class="book-status btn-book" aria-disabled="true" role="button" data-bs-toggle="button">Book Detail</div>
                         </div>
                         <div class="book-card">
                             <div class="book-title">Lord of the Flies</div>
@@ -93,25 +89,19 @@
                             <div class="book-title">The Great Gatsby</div>
                             <div class="book-author">by F. Scott Fitzgerald</div>
                             <div class="book-status available">Available</div>
-                            <div class="book-status btn-book">
-                                <a href="#">Book Detail</a>
-                            </div>
+                            <div class="book-status btn-book" aria-disabled="true" role="button" data-bs-toggle="button">Book Detail</div>
                         </div>
                         <div class="book-card">
                             <div class="book-title">The Immortal Life of Henrietta Lacks</div>
                             <div class="book-author">by Rebecca Skloot</div>
                             <div class="book-status borrowed">Borrowed</div>
-                            <div class="book-status btn-book">
-                                <a href="#">Book Detail</a>
-                            </div>
+                            <div class="book-status btn-book" aria-disabled="true" role="button" data-bs-toggle="button">Book Detail</div>
                         </div>
                         <div class="book-card">
                             <div class="book-title">To Kill a Mockingbird</div>
                             <div class="book-author">by Harper Lee</div>
                             <div class="book-status available">Available</div>
-                            <div class="book-status btn-book">
-                                <a href="#">Book Detail</a>
-                            </div>
+                            <div class="book-status btn-book" aria-disabled="true" role="button" data-bs-toggle="button">Book Detail</div>
                         </div>
                     </div>
                 </div>
