--- a/header.html
+++ b/header.html
@@ -14,5 +14,6 @@
         <a class="nav-link" href="sitemap.html">Sitemap</a>
         <a class="nav-link" href="contact.html">Contact</a>
         <a class="nav-link" href="privacy.html">Privacy</a>
+        <a class="nav-link" href="register.html">Register</a>
     </nav>
 </div>
