--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                                         +1 (555) 123-4567</p>
 
                                     <p><i class="fas fa-envelope"></i> <strong>Email:</strong><br>
-                                        info@silentlibrary.org</p>
+                                        <a href="mailto:info@silentlibrary.org">info@silentlibrary.org</a></p>
                                 </div>
                                 <div class="col-md-6">
                                     <p><i class="fas fa-clock"></i> <strong>Operating Hours:</strong></p>
