Amended the library address at the end of the privacy page

--- a/privacy.html
+++ b/privacy.html
@@ -85,9 +85,9 @@
                         <h4>Contact Information</h4>
                         <p>If you have questions about this privacy policy, please contact us at:</p>
                         <p>Silent Library<br>
-                        123 Knowledge Street<br>
-                        Wisdom City, WC 12345<br>
-                        Phone: (555) 123-4567<br>
+                        123 Quiet Street<br>
+                        Knowledge City, KC 12345<br>
+                        Phone: +1 (555) 123-4568<br>
                         Email: privacy@silentlibrary.org</p>
                     </div>
                 </div>
