Added link for library email at footer

--- a/footer.html
+++ b/footer.html
@@ -17,7 +17,7 @@
             <h3>Contact Info</h3>
             <p>123 Quiet Street<br>Knowledge City, KC 12345</p>
             <p>📞 +1 (555) 123-4567</p>
-            <p>✉️ info@silentlibrary.org</p>
+            <p><a href="mailto:info@silentlibrary.org">✉️ info@silentlibrary.org</a></p>
         </div>
     </div>
     <div class= "footer-section" style="text-align: center; padding-top: 2rem; border-top: 1px solid #34495e; margin-top: 2rem;">
